--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,12 +7,19 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/codelite"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
+       <!--   <meta-data 
+             android:name="com.google.android.gms.version"
+             android:value="@integer/google_play_services_version" />
+            
+            />    ^cannot find google_play_services_version -->
         
         <activity
             android:name="com.example.myfirstapp.MainActivity"
@@ -30,6 +37,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.myfirstapp.MainActivity"
+                
                  />
         </activity>
         
