--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-17
 android.library=false
 android.library.reference.1=../../Code/adt-bundle-mac-x86_64-20131030/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../google-play-services_lib
